@@ -30,16 +30,13 @@ the <A HREF="doc/api/index.html">javadoc</A>.
 Several working example files come with the distribution download.</blockquote>
 
 <h2>Where do I get releases?</h2>
-<blockquote>The latest release of HttpUnit is available 
-<var:dist  from the <a href="http://httpunit.sourceforge.net"><var:dist  HttpUnit home page</A>
-<var:publish>as a <a href="http://httpunit.sourceforge.net/httpunit_<version>.zip"><var:publish>zip file</A>
-.<var:publish><br><var:publish>Other builds are available by <a href="ftp://httpunit.sourceforge.net/pub/httpunit">
+<blockquote>Releases of HttpUnit are available 
+from <a href="http://sourceforge.net/project/showfiles.php?group_id=6550"> the project download page.</a>
+<var:publish><br><var:publish>Other builds are available by <a href="ftp://httpunit.sourceforge.net/pub/httpunit">
 <var:publish>anonymous ftp</a>.
-<var:publish><br><b><var:publish>Note: JTidy is now being hosted on SourceForge. 
-You may download it from <a href="http://sourceforge.net/project/showfiles.php?group_id=13153"><var:publish>the project download area</a></b>.
 </blockquote>
  
-<h2>How do I contribute, give feedback, fix bugs and so on?</h2>
+<h2>How do I get help, contribute, give feedback, fix bugs and so on?</h2>
 <ul>
 <li>We have a <a href="http://lists.sourceforge.net/mailman/listinfo/httpunit-develop">mailing list</a> for discussion of 
 the code.
