@@ -2,7 +2,7 @@ package com.meterware.httpunit;
 /********************************************************************************************************************
 * $Id$
 *
-* Copyright (c) 2000, Russell Gold
+* Copyright (c) 2000-2001, Russell Gold
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated 
 * documentation files (the "Software"), to deal in the Software without restriction, including without limitation 
@@ -19,6 +19,7 @@ package com.meterware.httpunit;
 * DEALINGS IN THE SOFTWARE.
 *
 *******************************************************************************************************************/
+import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.OutputStream;
 
@@ -27,19 +28,9 @@ import java.net.URLConnection;
 import java.util.Dictionary;
 import java.util.Enumeration;
 
-import javax.activation.*;
-
-import javax.mail.MessagingException;
-
-import javax.mail.internet.MimeBodyPart;
-import javax.mail.internet.MimeMultipart;
-
-
 /**
  * A POST-method message body which is MIME-encoded. This is used when uploading files, and is selected when the enctype
  * parameter of a form is set to "multi-part/form-data".
- *
- * Note that this class is only compiled if the JavaMail and Java Activation Framework are accessible.
  **/
 class MimeEncodedMessageBody extends MessageBody {
 
@@ -53,7 +44,7 @@ class MimeEncodedMessageBody extends MessageBody {
      * Updates the headers for this request as needed.
      **/
     void updateHeaders( URLConnection connection ) throws IOException {
-        connection.setRequestProperty( "Content-type", getMimeBody().getContentType() );
+        connection.setRequestProperty( "Content-type", "multipart/form-data;boundary=\"" + BOUNDARY + "\"" );
     }
 
 
@@ -61,43 +52,54 @@ class MimeEncodedMessageBody extends MessageBody {
      * Transmits the body of this request as a sequence of bytes.
      **/
     void writeTo( OutputStream outputStream ) throws IOException {
-        try {
-            getMimeBody().writeTo( outputStream );
-        } catch (MessagingException e) {
-            throw new IOException( e.toString() );
+        for (Enumeration e = getRequest().getParameterNames(); e.hasMoreElements();) {
+            String name = (String) e.nextElement();
+            String[] values = getRequest().getParameterValues( name );
+            for (int i = 0; i < values.length; i++) {
+                writeLn( outputStream, "--" + BOUNDARY );
+                writeLn( outputStream, "Content-Disposition: form-data; name=\"" + name + '"' );  // XXX need to handle non-ascii names here
+                writeLn( outputStream, "Content-Type: text/plain; charset=" + getRequest().getCharacterSet() );
+                writeLn( outputStream, "" );
+                writeLn( outputStream, values[i], getRequest().getCharacterSet() );
+            }
         }
+
+        Dictionary files = getRequest().getSelectedFiles();
+        for (Enumeration e = files.keys(); e.hasMoreElements();) {
+	    String name = (String) e.nextElement();
+	    WebRequest.UploadFileSpec spec = (WebRequest.UploadFileSpec) files.get( name );
+            writeLn( outputStream, "--" + BOUNDARY );
+            writeLn( outputStream, "Content-Disposition: form-data; name=\"" + name + "\"; filename=\"" + spec.getFile().getName() + '"' );   // XXX need to handle non-ascii names here
+//          writeLn( outputStream, "Content-Type: application/octet-stream" );   // XXX want to support real content types
+            writeLn( outputStream, "" );
+
+            FileInputStream in = new FileInputStream( spec.getFile() );
+            byte[] buffer = new byte[8 * 1024];
+            int count = 0;
+            do {
+                outputStream.write( buffer, 0, count );
+                count = in.read( buffer, 0, buffer.length );
+            } while (count != -1);
+
+            in.close();
+            writeLn( outputStream, "" );
+	}
+        writeLn( outputStream, "--" + BOUNDARY + "--" );
     }
 
 
-    private MimeMultipart _mimeMultipart;
+    private final static String BOUNDARY = "--HttpUnit-part0-aSgQ2M";
+    private final static byte[] CRLF     = { 0x0d, 0x0A };
 
-    private MimeMultipart getMimeBody() throws IOException {
-        if (_mimeMultipart == null) {
-            try {
-                _mimeMultipart = new MimeMultipart( "form-data" );
-                for (Enumeration e = getRequest().getParameterNames(); e.hasMoreElements();) {
-                    String name = (String) e.nextElement();
-                    MimeBodyPart mbp = new MimeBodyPart();
-                    mbp.setDisposition( "form-data; name=\"" + name + '"' );   // XXX need to handle non-ascii names here
-                    mbp.setText( getRequest().getParameter( name ), getRequest().getCharacterSet() );
-                    _mimeMultipart.addBodyPart( mbp );
-                }
 
-                Dictionary files = getRequest().getSelectedFiles();
-                for (Enumeration e = files.keys(); e.hasMoreElements();) {
-                    String name = (String) e.nextElement();
-                    WebRequest.UploadFileSpec spec = (WebRequest.UploadFileSpec) files.get( name );
-                    FileDataSource fds = new FileDataSource( spec.getFile() );
-                    MimeBodyPart mbp = new MimeBodyPart();
-                    mbp.setDisposition( "form-data; name=\"" + name + "\"; filename=\"" + spec.getFile().getName() + '"' );   // XXX need to handle non-ascii names here
-                    mbp.setDataHandler( new DataHandler( fds ) );
-                    _mimeMultipart.addBodyPart( mbp );
-                }
-            } catch (MessagingException e) {
-                throw new IOException( e.toString() );
-            }
-        }
-        return _mimeMultipart;
+    private void writeLn( OutputStream os, String value, String encoding ) throws IOException {
+        os.write( value.getBytes( encoding ) );
+        os.write( CRLF );
+    }
+
+
+    private void writeLn( OutputStream os, String value ) throws IOException {
+        writeLn( os, value, getRequest().getCharacterSet() );
     }
 
 }
