@@ -2,7 +2,7 @@ package com.meterware.httpunit;
 /********************************************************************************************************************
 * $Id$
 *
-* Copyright (c) 2000, Russell Gold
+* Copyright (c) 2000-2001, Russell Gold
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated 
 * documentation files (the "Software"), to deal in the Software without restriction, including without limitation 
@@ -212,8 +212,10 @@ class MimeEcho extends PseudoServlet {
                 if (i < numParts-1) sb.append( '&' );
             }
         } catch (MessagingException e) {
+            e.printStackTrace();
             sb.append( "Oops: " + e );
         } catch (IOException e) {
+            e.printStackTrace();
             sb.append( "Oops: " + e );
         }
 
